# lexRain

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPONENT_ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION.md  INTEGRATION_SUMMARY.md  INTERACTION_DESIGN.md  LAYOUT_OPTIMIZATION.md  PANEL_SCROLL_ENHANCEMENT.md  QUICKSTART.md  README.md  REVIEW_ENHANCEMENT.md  SCROLL_FEATURE.md  THEME_USAGE.md  create_test_data.py  sample_words.json  sample_words_chinese.json
.claude/: settings.local.json
src/: app.rs  app_v2.rs  db.rs  db_old.rs  event.rs  main.rs  models.rs  sm2.rs  theme.rs  tui.rs  ui.rs
src/components/: dashboard.rs  dictionary.rs  favorites.rs  history.rs  mod.rs  review.rs  settings.rs  statistics.rs  wordbook.rs
src/components/common/: mod.rs  popup.rs  progress_bar.rs  search_input.rs  status_bar.rs
