[package]
name = "lexRain"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI & Terminal
ratatui = { version = "0.29", features = ["widget-calendar"] }
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
